--- a/src/examples/Makefile.in
+++ b/src/examples/Makefile.in
@@ -97,10 +97,12 @@ endif
 SCHED_EXES = $(BINDIR)/examples/cpp-test-framework	\
 	     $(BINDIR)/examples/long-lived-framework	\
              $(BINDIR)/examples/memhog			\
+             $(BINDIR)/examples/sleep				\
              $(BINDIR)/examples/scheduled-memhog
 
 EXEC_EXES = $(BINDIR)/examples/cpp-test-executor	\
             $(BINDIR)/examples/long-lived-executor	\
+            $(BINDIR)/examples/sleep-executor \
             $(BINDIR)/examples/memhog-executor
 
 EXAMPLES_EXES = $(SCHED_EXES) $(EXEC_EXES)
@@ -143,8 +145,14 @@ $(BINDIR)/examples/long-lived-executor: @srcdir@/long_lived_executor.cpp $(MESOS
 $(BINDIR)/examples/memhog: @srcdir@/memhog.cpp $(MESOS_SCHED_LIB)
 	$(CXX) $(CXXFLAGS) -o $@ $< $(MESOS_SCHED_LIB) $(LDFLAGS) $(LIBS)
 
+$(BINDIR)/examples/sleep: @srcdir@/sleep.cpp $(MESOS_SCHED_LIB)
+  $(CXX) $(CXXFLAGS) -o $@ $< $(MESOS_SCHED_LIB) $(LDFLAGS) $(LIBS)
+
 $(BINDIR)/examples/memhog-executor: @srcdir@/memhog_executor.cpp $(MESOS_EXEC_LIB)
 	$(CXX) $(CXXFLAGS) -o $@ $< $(MESOS_EXEC_LIB) $(LDFLAGS) $(LIBS)
+
+$(BINDIR)/examples/sleep-executor: @srcdir@/sleep_executor.cpp $(MESOS_EXEC_LIB)
+  $(CXX) $(CXXFLAGS) -o $@ $< $(MESOS_EXEC_LIB) $(LDFLAGS) $(LIBS)
 
 $(BINDIR)/examples/scheduled-memhog: @srcdir@/scheduled_memhog.cpp $(MESOS_SCHED_LIB)
 	$(CXX) $(CXXFLAGS) -o $@ $< $(MESOS_SCHED_LIB) $(LDFLAGS) $(LIBS)
